# tokenese

./: .gitignore  AGENTS.md  CHANGELOG.md  CONFORMANCE.md  CONTRIBUTING.md  DESIGN.md  GRAMMAR-v0.3.md  HANDOFF.md  INTENT.md  LICENSE  LICENSE-SPEC  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SPEC.md  anthropic_costs.json  assistant-guide.txt  audit_anthropic.py  audit_candidates.py  audit_check_intersection.py  audit_common.py  audit_deepseek.py  audit_gemini.py  audit_gemma.py  audit_gemma4.py  audit_llama.py  audit_qwen.py  audit_symbols.py  check_dns_anchor.py  framesets.json  gemma4_costs.json  ontology.json  qwen_costs.json  relationships.yaml  requirements-optional.txt  requirements.txt  spec.md  test_audit_anthropic.py  test_audit_gemma4.py
tools/translator/: CAPABILITIES.md  README.md  pyproject.toml
tools/translator/data/source_provenance/: CONFORMANCE.md  HANDOFF.md  spec.md  (+2 more)
tools/translator/examples/: canonical.tkn
tools/translator/golden/: 01_canonical_deploy.english.txt  01_canonical_deploy.expect.json  01_canonical_deploy.tkn  02_v02_rich.expect.json  02_v02_rich.tkn  03_binding_failures.expect.json  03_binding_failures.tkn  04_scope_failures.expect.json  04_scope_failures.tkn  05_sense_failures.expect.json  05_sense_failures.tkn  06_triangulation_failures.expect.json  06_triangulation_failures.tkn  07_unparseable.expect.json  07_unparseable.tkn  08_repair_pins_plain.expect.json  08_repair_pins_plain.tkn  09_readback_verbatim.json  10_readback_transformed.json
tools/translator/tests/: test_compression_eval.py  test_framesets.py  test_golden.py  test_grammar_coverage.py  test_grammar_v03.py  test_hypothesis_eval.py  test_mcp.py  test_n2_report.py  test_skill_examples.py  test_tkab.py  test_translator.py
tools/translator/tkab/: AUDIT_CARD.md  __init__.py  checker.py  cli.py
tools/translator/tokenese_translator/: __init__.py  cli.py  compression_eval.py  framesets.py  handles.py  lexer.py  lexicon.py  mcp_server.py  misparse.py  n2_report.py  parser.py  readback.py  receiver_eval.py  renderer.py  score.py  session.py  token_count.py  validator.py
(+53 files in other folders)
